--- a/yaml-files/version2/input.yaml
+++ b/yaml-files/version2/input.yaml
@@ -1,137 +1,80 @@
 Parameters:
+    #Standar Model Parameters
+    StandardModel_SLHA2: !import include/StandardModel_SLHA2_scan.yaml
 
-  # SM parameters
-  StandardModel_SLHA2: !import include/StandardModel_SLHA2_scan.yaml
+    #MSSM Parameters
+    MSSM19atQ_mA:
+        Ad_3:
+        Ae_3:
+        Au_3:
+        M1:
+        M2:
+        M3:
+        Qin:
+        TanBeta:
+        mA:
+        md2_12:
+        md2_3:
+        me2_12:
+        me2_3:
+        ml2_12:
+        ml2_3:
+        mq2_12:
+        mq2_3:
+        mu:
+        mu2_12:
+        mu2_3:
 
-  # SUSY parameters
-  MSSM7atQ:
-    Qin:
-      fixed_value: 1000.0
-    SignMu:
-      fixed_value: 1
-    Ad_3:
-      prior_type: double_log_flat_join
-      ranges: [-1e4, -1e2, 1e2, 1e4]
-    Au_3:
-      prior_type: double_log_flat_join
-      ranges: [-1e4, -1e2, 1e2, 1e4]
-    M2:
-      prior_type: double_log_flat_join
-      ranges: [-1e4, -1e2, 1e2, 1e4]
-    TanBeta:
-      range: [3.0, 70.0]
-      prior_type: flat
-    mHd2:
-      prior_type: double_log_flat_join
-      ranges: [-1e8, -1e4, 1e4, 1e8]
-    mHu2:
-      prior_type: double_log_flat_join
-      ranges: [-1e8, -1e4, 1e4, 1e8]
-    mf2:
-      prior_type: double_log_flat_join
-      ranges: [0, 0, 1e4, 1e8]
 
-Printer:
-  printer: hdf5
-  options:
-    output_file: "MSSM_SCANNER"
-    group: "/MSSM"
-    delete_file_on_restart: true
-
-Scanner:
-
- use_scanner: random
-
- scanners:
-   multinest:
-     plugin: multinest
-     like:  LogLike
-     nlive: 5000
-     tol: 0.1
-     updInt: 1
-
-   random:
-     plugin: random
-     point_number: 10
-     like:  LogLike
-     printme: false
-
-    de:
-      plugin: diver
-      like: LogLike
-      NP: 100
-      convthresh: 1e-3
-      verbosity: 3
-
-  default_output_path: runs/MSSM_SCANNER/scanner_plugins/
+Priors:
 
 ObsLikes:
 
-  # PrecisionBit
-  - purpose: LogLike
-    capability: lnL_t_mass
-  - purpose: LogLike
-    capability: lnL_alpha_s
-  - purpose: LogLike
-    capability: lnL_GF
-  - purpose: LogLike
-    capability: lnL_alpha_em
-  - purpose: LogLike
-    capability: lnL_t_mass
-  - purpose: LogLike
-    capability: lnL_Z_mass
-
-  # DarkBit
-  - purpose: Observable
-    capability: lnL_oh2
-  - purpose:    Observable
-    capability: RD_oh2
-  - purpose: Observable
-    cabability: mwimp 
-  
-
 Rules:
 
-  # SpecBit
-  - capability: MSSM_spectrum
-    type: Spectrum
-    function: make_MSSM_precision_spectrum_none
-  - capability: unimproved_MSSM_spectrum
-    type: Spectrum
-    function: get_MSSM_spectrum_Spheno
+Printer:
+    printer: hdf5
     options:
-      n_run: 10
-      delta_mass: 1.0e-4
-  
-  # DarkBit
-  - capability: TH_ProcessCatalog
-    function: TH_ProcessCatalog_DS_MSSM
-    options:
-      ignore_three_body: false
-      ProcessCatalog_MinBranching: 0
-  - capability: lnL_oh2
-    function: lnL_oh2_Simple
-  - capability: RD_oh2
-    function: RD_oh2_MicrOmegas
+        group: "/MSSM"
+        output_file: "GAMBIT_v2"
+        delete_file_on_restart: false
+
+Scanner:
+    use_scanner: de
+    scanners:
+
+        de:
+            plugin: diver
+            like: LogLike
+            NP: 100
+            convthresh: 1e-3
+            verbosity: 3
+
+        random:
+            plugin: random
+            like: LogLike
+            point_number: 100
+
 
 
 Logger:
+    redirection:
+        [Default] : "default.log"
+        [Warning] : "warning.log"
+        [Error, Fatal] : "error.log"
+        [Debug]: "debug.log"
+        [Dependency Resolver] : "dep_res.log"
 
-  redirection: 
-    [Debug]: "debug.log"
-    [Default]: "default.log"
-    [SpecBit]: "SpecBit.log"
-    [PrecisionBit] : "PrecBit.log"
-    [DarkBit] : "DarkBit.log"
+
 
 KeyValues:
+    dependency_resolution:
+        prefer_model_specific_functions: true
+        log_runtime: true
 
-  default_output_path: "runs/MSSM_SCANNER"
+    likelihood:
+        model_invalid_for_lnlike_below: 1e-5
 
-  dependency_resolution: 
-    prefer_model_specific_functions: true
+    default_output_path: "runs/GAMBIT_v2/"
 
-  likelihood:
-    model_invalid_for_lnlike_below: -1e5
-
-  debug: true
+    debug: true
