--- a/yaml-files/version2/input.yaml
+++ b/yaml-files/version2/input.yaml
@@ -4,43 +4,78 @@ Parameters:
 
     #MSSM Parameters
     MSSM19atQ_mA:
-        Ad_3:
+        Ab_3:
+            range: [-2000.0,2000.0]
         Ae_3:
+            range: [-2000.0,2000.0]
         Au_3:
+            range: [-8000.0,8000.0]
         M1:
+            range: [-2000.0,2000.0]
         M2:
+            range: [-2000.0,2000.0]
         M3:
+            range: [1000.0,5000.0]
         Qin:
+            fixed_value: 2000.0
         TanBeta:
+            range: [1.0,60.0]
         mA:
+            range: [0.0,5000.0]
         md2_12:
+            fixed_value: 10e3
         md2_3:
+            range: [2000.0,5000.0]
         me2_12:
+            fixed_value: 10e3
         me2_3:
+            fixed_value: 10e3
         ml2_12:
+            fixed_value: 10e3
         ml2_3:
+            fixed_value: 10e3
         mq2_12:
+            fixed_value: 10e3
         mq2_3:
+            range: [2000.0,5000.0]
         mu:
+            range: [-2000.0,2000.0]
         mu2_12:
+            fixed_value: 10e3
         mu2_3:
+            range: [2000.0,5000.0]
 
 
 Priors:
+    #all priors are simple
 
 ObsLikes:
+    - purpose: Observable
+      capability: MSSM_spectrum
+      type: map_str_dbl
 
 Rules:
+    - capability: unimproved_MSSM_spectrum
+      type: Spectrum
+      function: get_MSSM_spectrum_SPheno
+      options:
+        n_run: 30
+        delta_mass: 1.0e-4
+
+    - capability: MSSM_spectrum
+      type: Spectrum
+      function: make_MSSM_precision_spectrum_none
+      
 
 Printer:
     printer: hdf5
     options:
         group: "/MSSM"
         output_file: "GAMBIT_v2"
-        delete_file_on_restart: false
+        #delete_file_on_restart: false
 
 Scanner:
-    use_scanner: de
+    use_scanner: random
     scanners:
 
         de:
@@ -53,7 +88,7 @@ Scanner:
         random:
             plugin: random
             like: LogLike
-            point_number: 100
+            point_number: 1
 
 
 
@@ -63,6 +98,7 @@ Logger:
         [Warning] : "warning.log"
         [Error, Fatal] : "error.log"
         [Debug]: "debug.log"
+        [Core] : "core.log"
         [Dependency Resolver] : "dep_res.log"
 
 
@@ -70,7 +106,6 @@ Logger:
 KeyValues:
     dependency_resolution:
         prefer_model_specific_functions: true
-        log_runtime: true
 
     likelihood:
         model_invalid_for_lnlike_below: 1e-5
