--- a/runs/version2/GAMBIT_v2/input.yaml
+++ b/runs/version2/GAMBIT_v2/input.yaml
@@ -28,7 +28,7 @@ Parameters:
     delta13: 0
     alpha1: 0
     alpha2: 0
-  MSSM19atQ_mA:
+  MSSM19atQ:
     Ad_3:
       range: [-2000.0, 2000.0]
     Ae_3:
@@ -45,8 +45,10 @@ Parameters:
       fixed_value: 2000.0
     TanBeta:
       range: [1.0, 60.0]
-    mA:
-      range: [0.0, 5000.0]
+    mHd2:
+      range: [1000.0, 5000.0]
+    mHu2:
+      range: [1000.0, 5000.0]
     md2_12:
       fixed_value: 10e3
     md2_3:
@@ -63,8 +65,8 @@ Parameters:
       fixed_value: 10e3
     mq2_3:
       range: [2000.0, 5000.0]
-    mu:
-      range: [-2000.0, 2000.0]
+    SignMu:
+      range: [-1., 1.]
     mu2_12:
       fixed_value: 10e3
     mu2_3:
@@ -74,6 +76,26 @@ ObsLikes:
   - purpose: Observable
     capability: MSSM_spectrum
     type: map_str_dbl
+  - purpose: Observable
+    capability: muon_gm2
+  - purpose: Observable
+    capability: RD_oh2
+  - purpose: LogLike
+    capability: lnL_gm2
+  - purpose: LogLike
+    capability: lnL_t_mass
+  - purpose: LogLike
+    capability: lnL_Z_mass
+  - purpose: LogLike
+    capability: lnL_W_mass
+  - purpose: LogLike
+    capability: lnL_h_mass
+  - purpose: LogLike
+    capability: lnL_alpha_em
+  - purpose: LogLike
+    capability: lnL_alpha_s
+  - purpose: LogLike
+    capability: lnL_GF
 Rules:
   - capability: unimproved_MSSM_spectrum
     type: Spectrum
@@ -84,6 +106,19 @@ Rules:
   - capability: MSSM_spectrum
     type: Spectrum
     function: make_MSSM_precision_spectrum_none
+  - capability: muon_gm2
+    function: GM2C_SUSY
+  - capability: lnL_gm2
+    function: lnL_gm2
+    dependencies:
+      - capability: muon_gm2_SM
+        function: gm2_SM_ee
+  - capability: mw
+    function: mw_from_MSSM_spectrum
+  - capability: mh
+    function: mh_from_MSSM_spectrum
+  - capability: RD_oh2
+    function: RD_oh2_general
 Printer:
   printer: hdf5
   options:
@@ -112,6 +147,8 @@ Logger:
     [Debug]: debug.log
     [Core]: core.log
     [Dependency Resolver]: dep_res.log
+    [PrecisionBit]: prec_bit.log
+    [SpecBit]: spec_bit.log
   default_output_path: runs/GAMBIT_v2//logs/
 KeyValues:
   dependency_resolution:
