--- a/runs/version2/GAMBIT_v2/input.yaml
+++ b/runs/version2/GAMBIT_v2/input.yaml
@@ -80,6 +80,8 @@ ObsLikes:
     capability: muon_gm2
   - purpose: Observable
     capability: RD_oh2
+  - purpose: Observable
+    capability: mwimp
   - purpose: LogLike
     capability: lnL_gm2
   - purpose: LogLike
@@ -96,6 +98,8 @@ ObsLikes:
     capability: lnL_alpha_s
   - purpose: LogLike
     capability: lnL_GF
+  - purpose: LogLike
+    capability: lnL_oh2
 Rules:
   - capability: unimproved_MSSM_spectrum
     type: Spectrum
@@ -118,7 +122,28 @@ Rules:
   - capability: mh
     function: mh_from_MSSM_spectrum
   - capability: RD_oh2
-    function: RD_oh2_general
+    function: RD_oh2_MicrOmegas
+  - capability: decay_rates
+    type: DecayTable
+    function: all_decays
+  - capability: A0_decay_rates
+    function: A0_decays
+  - capability: H_plus_decay_rates
+    function: H_plus_decays
+  - capability: Higgs_decay_rates
+    function: SM_Higgs_decays
+  - capability: h0_2_decay_rates
+    function: h0_2_decays
+  - capability: t_decay_rates
+    function: t_decays
+  - capability: Reference_SM_Higgs_decay_rates
+    function: Ref_SM_Higgs_decays_table
+  - capability: lnL_oh2
+    function: lnL_oh2_upperlimit
+  - capability: DarkMatter_ID
+    function: DarkMatter_ID_MSSM
+  - capability: TH_ProcessCatalog
+    function: TH_ProcessCatalog_SingletDM
 Printer:
   printer: hdf5
   options:
